// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-form-field-textarea #render help should render component as expected 1`] = `
<gux-form-field-textarea>
  <mock:shadow-root>
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-resize-undefined">
          <slot name="input"></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help gux-show">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root><textarea aria-describedby="gux-form-field-help-i" id="gux-form-field-input-i" name="textarea" slot="input"></textarea>
  <label for="gux-form-field-input-i" slot="label">
    Default
  </label>
  <span id="gux-form-field-help-i" slot="help">
    This is a help message
  </span>
</gux-form-field-textarea>
`;

exports[`gux-form-field-textarea #render input attributes should render component as expected (1) 1`] = `
<gux-form-field-textarea>
  <mock:shadow-root>
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-resize-undefined">
          <slot name="input"></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root><textarea id="gux-form-field-input-i" slot="input"></textarea>
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-textarea>
`;

exports[`gux-form-field-textarea #render input attributes should render component as expected (2) 1`] = `
<gux-form-field-textarea>
  <mock:shadow-root>
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-resize-undefined">
          <slot name="input"></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root><textarea disabled="" id="gux-form-field-input-i" slot="input"></textarea>
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-textarea>
`;

exports[`gux-form-field-textarea #render input attributes should render component as expected (3) 1`] = `
<gux-form-field-textarea>
  <mock:shadow-root>
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-resize-undefined">
          <slot name="input"></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root><textarea id="gux-form-field-input-i" required="" slot="input"></textarea>
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-textarea>
`;

exports[`gux-form-field-textarea #render label-position should render component as expected (1) 1`] = `
<gux-form-field-textarea>
  <mock:shadow-root>
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-resize-undefined">
          <slot name="input"></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root><textarea id="gux-form-field-input-i" slot="input"></textarea>
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-textarea>
`;

exports[`gux-form-field-textarea #render label-position should render component as expected (2) 1`] = `
<gux-form-field-textarea label-position="above">
  <mock:shadow-root>
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-resize-undefined">
          <slot name="input"></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root><textarea id="gux-form-field-input-i" slot="input"></textarea>
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-textarea>
`;

exports[`gux-form-field-textarea #render label-position should render component as expected (3) 1`] = `
<gux-form-field-textarea label-position="beside">
  <mock:shadow-root>
    <div class="gux-beside gux-form-field-container">
      <div class="gux-beside gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-resize-undefined">
          <slot name="input"></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root><textarea id="gux-form-field-input-i" slot="input"></textarea>
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-textarea>
`;

exports[`gux-form-field-textarea #render label-position should render component as expected (4) 1`] = `
<gux-form-field-textarea label-position="screenreader">
  <mock:shadow-root>
    <div class="gux-form-field-container gux-screenreader">
      <div class="gux-form-field-label gux-screenreader">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-resize-undefined">
          <slot name="input"></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root><textarea id="gux-form-field-input-i" slot="input"></textarea>
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-textarea>
`;

exports[`gux-form-field-textarea #render resize should render component as expected (1) 1`] = `
<gux-form-field-textarea>
  <mock:shadow-root>
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-resize-undefined">
          <slot name="input"></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root><textarea id="gux-form-field-input-i" slot="input"></textarea>
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-textarea>
`;

exports[`gux-form-field-textarea #render resize should render component as expected (2) 1`] = `
<gux-form-field-textarea resize="auto">
  <mock:shadow-root>
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-resize-auto" data-replicated-value="undefined">
          <slot name="input"></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root><textarea id="gux-form-field-input-i" slot="input"></textarea>
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-textarea>
`;

exports[`gux-form-field-textarea #render resize should render component as expected (3) 1`] = `
<gux-form-field-textarea resize="manual">
  <mock:shadow-root>
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-resize-manual">
          <slot name="input"></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root><textarea id="gux-form-field-input-i" slot="input"></textarea>
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-textarea>
`;

exports[`gux-form-field-textarea #render resize should render component as expected (4) 1`] = `
<gux-form-field-textarea resize="none">
  <mock:shadow-root>
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-resize-none">
          <slot name="input"></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root><textarea id="gux-form-field-input-i" slot="input"></textarea>
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-textarea>
`;
